Solution: I used justify-content and align-items correctly at first. I addded display: flex to all items at first and then starting deleting until it broke, to keep it simple as possible. As suggested in the readme i added two divs, right and left. Then i got stuck becuase even though i had justify-content: flex-end on .right i couldn't get it to get there. I was one hour with this problem and had to resort to the unforgivable for the first time in this course, ChatGPT. It turns out if i wanted to space left and right i had to use justify-content space-between in header. Good learning, it will make my coding easier moving forward

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  flex: 1 1 auto;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -27,6 +31,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  align-self: center;
+  margin: 0 10px 0 10px;
 }
 
 button {
@@ -41,8 +47,26 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 0px;
+  padding: 0px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 2px;
+  padding: 0px;
+  gap: 15px;
+}
+
+.left,
+.right {
+  display: flex;
+  flex: 0 1 auto;
+  align-items: center;
+}
+
+.right {
+  flex-direction: row;
+  justify-content: flex-end;
 }
